-=[ Gaim ]=-  The Pimpin' Penguin IM Client That's Good For The Soul!

0.76 (04/01/2004):
	Luke: Okay, normally I wait for Sean to go first, but he said to commit.
	Its been a few months since the last release, but we haven't just been
	lazy. A very long ChangeLog for you all. Most notably of course is the
	addition of WYSIWYG input for chats and conversations. Many thanks to
	DAYS of long work by Sean, Gary Kramlich, Kevin Stange, Tim Ringenbach,
	and Stu Tomlinson for their efforts writting, fixing, and testing this.
	Without the dedicated support of our crazy patch writters, this release
	would have taken yet longer. Sean also has yahoo working again, with some
	assistance from our friends over at Trillian, you may all officially
	rejoice. We also have a large number of bug fixes, closing more than 200
	bug reports this month alone.

	Christian: It's been a long time between the last release, but I think
	you guys will find that we've managed to do some neat stuff in this one.
	So many bug fixes and new features. It's enough to drive a wombat mad!
	The new WYSIWYG input is cool stuff. You'll either love it or hate it,
	I guess. I'm working on some stuff that some of you are going to love,
	but I'm not promising it for a few more versions. It's a secret!

	Mark: Our crazy patch writers rock.  Gary Kramlich, Tim Ringenbach,
	Kevin Stange, and Stu Tomlinson did an amazing job of tying up
	loose ends and helping get this release out the door.  Thanks guys!

	Rob: My birthday is in a few days.  I like cool stuff.  Buy me something
	grand!!

	Tim: Luke said write a NEWS, so I thought I would.  There's a room
	list dialog now. And Nathan and I doubled the number of protocols that
	can transfer files.  After that I got lazy/busy and let Gary, Kevin,
	and Stu fix all the bugs.

0.75 (01/09/2004):
	Rob: Woah, what's this? Me? Making a NEWS post!? Say it ain't so!
	That's right, kiddos, I'm finally coming out of my reclusiveness.